Add smooth scroll to quiz
Need to scroll to target

--- a/quiz.html
+++ b/quiz.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <hr>
-            <div class="quiz-result d-none">
+            <div id="quiz-result" class="quiz-result" tabindex="-1">
                 <div class="quiz-result-options">
                     <p class="quiz-score-option normal-text">
                         <span class="fw-b">9-10 Trues–</span>You were ready yesterday! What are you waiting for? Click HERE to set up your first session
@@ -166,11 +166,14 @@
                         </div>
                     </div>
                     <hr class="quiz-hr">
-                    <button class="quiz-submit btn-pink normal-text">Submit</button>
+                    <button id="quiz-submit" class="scroll quiz-submit btn-pink normal-text">Submit</button>
                 </form>
             </div>
         </div>
     </div>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
