Clean up js errors in console

--- a/contact.html
+++ b/contact.html
@@ -83,27 +83,27 @@
                 Fill out the form below or email us at blahblah@coaching.com
             </h3>
             <div class="contact-form">
-                <form>
+                <form action="https://mailthis.to/yuztntnuen" method="POST" encType="multipart/form-data">
                     <div class="form-grid">
                         <div class="form-group full-name">
                             <hr class="form-hr">
-                            <input type="name" class="form-field" id="full-name-field" placeholder="Your first and last name">
+                            <input type="text" name="name" class="form-field" id="full-name-field" placeholder="Your first and last name">
                         </div>
                         <div class="form-group email">
                             <hr class="form-hr">
-                            <input type="email" class="form-field" id="email-field" placeholder="Email address">
+                            <input type="email" name="_replyto" class="form-field" id="email-field" placeholder="Email address">
                         </div>
                         <div class="form-group service">
                             <hr class="form-hr">
-                            <input type="email" class="form-field" id="service-field" placeholder="Service you're interested in">
+                            <input type="text" name="_subject" class="form-field" id="service-field" placeholder="Service you're interested in">
                         </div>
                         <div class="form-group hear">
                             <hr class="form-hr">
-                            <input type="email" class="form-field" id="hear-field" placeholder="How did you hear about us?">
+                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?">
                         </div>
                         <div class="form-group message">
                             <hr class="form-hr">
-                            <textarea class="form-field" id="message-field" rows="" placeholder="Message"></textarea>
+                            <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message"></textarea>
                             <hr class="form-hr">
                         </div>
                     </div>
