Add in mhair images

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p> -->
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">& break free to</p>
             <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p> -->
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Now is the time</p>
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">Release your power</p>
-            <p class="animate__animated animate__fadeInRight animate__delay-1s">live your purpose</p>
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p>
+            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Live your purpose</p>
+            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p> -->
         </div>
     </section>
     <!-- END: hero section -->
@@ -81,22 +81,21 @@
         <div class="home-about-title">
             <h1 class="logo-2">Hey, I'm Mhairi</h1>
             <h2 class="fw-b home-about-subtitle ml-1">
-                Life coach for talented individuals who have yet to unlock their full
-                 potential and feel their true worth... Welcome home.
+                Life coach for talented women who want to unlock their potential and feel their true worth.
             </h2>
         </div>
         <div class="home-about-img">
-            <img src="static/img/core-img/woman-sit-table.jpeg" alt="">
+            <img src="static/img/core-img/mhairi_garden.jpg" alt="Mhairi-garden">
         </div>
         <div class="home-about-text">
             <p class="normal-text">
                 I worked for many years in senior roles with fancy job titles and amazing salaries, but I was never truly fulfilled.
             </p>
             <p class="normal-text">
-                Despite completing a Medical Biology degree I knew my passion lay elsewhere.  Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive job title, six figure salary, nice car, you get the picture.  But when I got all that, I still didn’t feel successful.  More so on the way to getting it I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with my true passion….helping people
+                After completing a Medical Biology degree I knew my passion lay out with the sciences/lab.  But what to do? Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive job title, six figure salary, nice car, you get the picture.  When I got there I realised I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with MY true passion….helping people.
             </p>
             <p class="normal-text">
-                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to true fulfilment and happiness and how I can help you with yours.
+                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to (living my dream life and how I can help you live yours) geniune fulfilment and how I can help you with yours.
             </p>
         </div>
         <div class="about-cta-btn">
@@ -109,36 +108,35 @@
     <section class="home-coaching">
         <div class="coaching-1-1">
             <div class="coaching-img">
-                <img src="static/img/core-img/straight.jpeg" alt="Woman-standing">
+                <img src="static/img/core-img/mhairi_garden.jpg" alt="mhairi_garden">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
                 <p class="normal-text"> 
-                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi the ‘one’?  Mind Reading abilities aside these are exactly the questions you should be asking.
-                    <p class="normal-text">
-                        To uncover, take my quick fire quiz and read my story.
-                        Spoiler alert, the fact that you are here means the answers you seek are YES and YES.
-                    </p>
+                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi is the ‘one’?  Mindreading abilities aside these are exactly the questions you should be asking.
+                </p>
+                <p class="normal-text">
+                    Take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES.
                 </p>
                 <div class="coach-cta-btn">
-                    <a class="btn-white-sm" href="services.html">I'm all in!</a>
+                    <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
                 </div>
             </div>
         </div>
         <div class="coaching-free">
             <div class="coaching-img">
-                <img src="static/img/core-img/in-air.jpeg" alt="Hands in air">
+                <img src="static/img/core-img/mhairi_laptop.jpg" alt="mhairi-laptop">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">What</h2>
                 <p class="normal-text p-md-0">  
-                    So you're all in on the concept of coaching but maybe you’ve had it before and it wasn’t quite the revelation it promised to be, or perhaps you’re new to coaching and have no idea what the journey would look like. 
-                    <p class="normal-text">
-                        Read more about how the programs work and which package would be best for you.
-                    </p>
+                    So you’re all in on the idea of coaching but maybe you’ve had it before and it wasn’t quite the revelation it promised to be, or perhaps you’re new to coaching and have no idea what the journey would look like.                     
+                </p>
+                <p class="normal-text">
+                    Read more about how the programs work and which package suits you.
                 </p>
                 <div class="coach-cta-btn">
-                    <a class="btn-white-sm" href="services.html">I'm all in!</a>
+                    <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
                 </div>
             </div>
         </div>
@@ -155,7 +153,7 @@
                     </p>
                 </p>
                 <div class="coach-cta-btn">
-                    <a class="btn-white-sm" href="services.html">I'm all in!</a>
+                    <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
                 </div>
             </div>
         </div>
@@ -170,9 +168,8 @@
                 Words I live by
             </h3>
             <p class="quote-text">
-                "When joy is a habit, Love is a reflex"
+                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
             </p>
-            <p class="quote-author sect-subtitle">- Bob Goff</p>
         </div>
     </section>
     <!-- END: parralex quote section -->
@@ -180,14 +177,14 @@
     <!-- quiz section -->
     <section class="quiz-section">
         <h2 class="quiz-title sect-title">
-            The coaching personality 
+            The coaching  
         </h2>
         <h3 class="quiz-font logo-font">
             quiz
         </h3>
         <div class="quiz-cta-content">
             <h4 class="quiz-content-title sect-title">
-                Find out what your website style is in less than 60 seconds! 
+                Find out if coaching is for you in less than 60 seconds
             </h4>
             <!-- <p class="quiz-content-main normal-text">
                 Personal life coaching is not for everyone. There are some who would benefit from a 
