--- a/quiz.html
+++ b/quiz.html
@@ -29,10 +29,10 @@
                 </div>
             </div>
             <hr>
-            <div id="quiz-result" class="quiz-result" tabindex="-1">
+            <!-- <div id="quiz-result" class="quiz-result" tabindex="-1">
                 <div class="quiz-result-options">
                     <p class="quiz-score-option normal-text">
-                        <span class="fw-b">9-10 Trues–</span>You were ready yesterday! What are you waiting for? Click HERE to set up your first session
+                        <span class="fw-b">7-10 Trues–</span>You were ready yesterday! What are you waiting for? Click HERE to set up your first session
                     </p>
                     <p class="quiz-score-option normal-text">
                         <span class="fw-b">7-8 Trues–</span>You are ready for coaching. Review the answers that were false for you and think about what it would take for them to become true. Share them with your coach.
@@ -45,7 +45,7 @@
                     </p>
                 </div>
                 <hr>
-            </div>
+            </div> -->
             
             <div class="quiz-main-fs">
                 <form action="#" method="post" class="demoForm" id="demoForm">
