Add netlify forms

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                 Fill out the form below or email us at blahblah@coaching.com
             </h3>
             <div class="contact-form">
-                <form action="https://mailthis.to/yuztntnuen" method="POST" encType="multipart/form-data">
+                <form action="" method="POST" data-netlify="true" encType="multipart/form-data">
                     <div class="form-grid">
                         <div class="form-group full-name">
                             <hr class="form-hr">
@@ -106,6 +106,7 @@
                             <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message"></textarea>
                             <hr class="form-hr">
                         </div>
+                        <div data-netlify-recaptcha="true"></div>
                     </div>
                     <button type="submit" class="contact-btn sect-title">Send</button>
                 </form>
