--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                 Fill out the form below or email us at blahblah@coaching.com
             </h3>
             <div class="contact-form">
-                <form action="" method="POST" data-netlify="true" encType="multipart/form-data">
+                <form name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
                     <div class="form-grid">
                         <div class="form-group full-name">
                             <hr class="form-hr">
