--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,12 @@
             </ul>
         </nav>
     </header>
+    
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- /Preloader -->
 
     <!-- logo on mobile -->
     <div class="logo-xs-container d-md-none">
