--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         </nav>
     </header>
 
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- /Preloader -->
+    
     <!-- logo on mobile -->
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
