Add quiz carousel

--- a/quiz.html
+++ b/quiz.html
@@ -8,167 +8,69 @@
     <title>Quiz</title>
 </head>
 <body>
+
+
+
+
+
+
     <div class="quiz-full-screen">
         <div class="quiz-content">
-            <div class="quiz-intro-fs">
-                <h2 class="quiz-title-fs sect-title">
-                    The coaching personality 
-                </h2>
-                <h3 class="quiz-font-fs logo-font">
-                    quiz
-                </h3>
-                <div class="quiz-fs-text">
-                    <!-- <h4 class="quiz-content-title-fs sect-title">
-                        Find out what your website style is in less than 60 seconds! 
-                    </h4> -->
-                    <p class="quiz-content-main-fs normal-text">
-                        Coaching can be powerful, impactful and life-changing but only when you are ready and willing to commit to
-                        the process. Do you think you are ready? Find out below. Read each statement and answer honestly if the
-                        statement is true for you. 
-                    </p>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item quiz-intro-fs active">
+                        <h2 class="quiz-title-fs sect-title">
+                            The coaching personality<span class="logo-font span-logo-font">quiz</span>
+                        </h2>
+                        <div class="quiz-fs-text">
+                            <!-- <h4 class="quiz-content-title-fs sect-title">
+                                Find out what your website style is in less than 60 seconds! 
+                            </h4> -->
+                            <p class="quiz-content-main-fs normal-text">
+                                Coaching can be powerful, impactful and life-changing but only when you are ready and willing to commit to
+                                the process. Do you think you are ready? Find out below. Read each statement and answer honestly if the
+                                statement is true for you. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item quiz-carousel-item">
+                        <div class="quiz-item">
+                            <!-- <div class="quiz-checkboxes">
+                                <input type="checkbox" name="3[]" value="3" class="checkbox"/>
+                                <input type="checkbox" name="3[]" value="3" class="checkbox"/>
+                            </div> -->
+                            <label class="normal-text quiz-label">1. I understand that I am ultimately responsible for the life I live and that I have the power to make the
+                                changes I want to make.</label> 
+                            <div class="options">
+                                <button class="option-btn">True</button>
+                                <button class="option-btn">False</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item quiz-carousel-item">
+                        <div class="quiz-item">
+                            <!-- <div class="quiz-checkboxes">
+                                <input type="checkbox" name="4[]" value="4" class="checkbox"/>
+                                <input type="checkbox" name="4[]" value="4" class="checkbox"/>
+                            </div> -->
+                            <label class="normal-text quiz-label">2. I acknowledge that much of the coaching process takes place in between coaching sessions, and I am
+                                ready and willing to put in the necessary work.</label> 
+                            <div class="options">
+                                <button class="option-btn">True</button>
+                                <button class="option-btn">False</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <!-- <div id="quiz-result" class="quiz-result" tabindex="-1">
-                <div class="quiz-result-options">
-                    <p class="quiz-score-option normal-text">
-                        <span class="fw-b">7-10 Trues–</span>You were ready yesterday! What are you waiting for? Click HERE to set up your first session
-                    </p>
-                    <p class="quiz-score-option normal-text">
-                        <span class="fw-b">7-8 Trues–</span>You are ready for coaching. Review the answers that were false for you and think about what it would take for them to become true. Share them with your coach.
-                    </p>
-                    <p class="quiz-score-option normal-text">
-                        <span class="fw-b">5-6 Trues–</span>You may be ready depending on your willingness to change thoses falses to trues. Discuss with your coach how to make that happen.
-                    </p>
-                    <p class="quiz-score-option normal-text">
-                        <span class="fw-b">Below 5 Trues–</span>You are not quite ready for coaching, but that does not mean you won’t be ready in the future. Continue to visit our BLOG to learn more and when you are ready, we will be ready for you!
-                    </p>
-                </div>
-                <hr>
-            </div> -->
-            
-            <div class="quiz-main-fs">
-                <form action="#" method="post" class="demoForm" id="demoForm">
-                    <div class="quiz-item">
-                        <!-- <div class="quiz-checkboxes">
-                            <input type="checkbox" name="3[]" value="3" class="checkbox"/>
-                            <input type="checkbox" name="3[]" value="3" class="checkbox"/>
-                        </div> -->
-                        <label class="normal-text quiz-label">1. I understand that I am ultimately responsible for the life I live and that I have the power to make the
-                            changes I want to make.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <!-- <div class="quiz-checkboxes">
-                            <input type="checkbox" name="4[]" value="4" class="checkbox"/>
-                            <input type="checkbox" name="4[]" value="4" class="checkbox"/>
-                        </div> -->
-                        <label class="normal-text quiz-label">2. I acknowledge that much of the coaching process takes place in between coaching sessions, and I am
-                            ready and willing to put in the necessary work.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
-                            <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
-                        </div>
-                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
-                            for the better.</label> 
-                        <div class="options">
-                            <button class="option-btn">True</button>
-                            <button class="option-btn">False</button>
-                        </div>
-                    </div>
-                    <hr class="quiz-hr">
-                    <button id="quiz-submit" class="scroll quiz-submit btn-pink normal-text">Submit</button>
-                </form>
-            </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>   
         </div>
     </div>
     <!-- jQuery -->
